add several services and unit tests